modified update logic so that a table i only accessed by one dao